@@ -1,32 +1,58 @@
-# Copyright (C) 2004, 2005, 2006, 2007  Alex Schroeder <alex@emacswiki.org>
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; either version 3 of the License, or
-# (at your option) any later version.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program.  If not, see <http://www.gnu.org/licenses/>.
+#!/usr/bin/env perl
+# ====================[ toc.pl                             ]====================
 
-$ModulesDescription .= '<p>$Id: toc.pl,v 1.49 2007/11/14 22:06:05 as Exp $</p>';
+=head1 NAME
 
-push(@MyRules, \&TocRule);
+toc - An Oddmuse module for adding a "Table of Contents" to Oddmuse Wiki pages.
 
-# This must come *before* either headers.pl or the usemod.pl rules and
-# adds support for portrait-support.pl
-$RuleOrder{\&TocRule} = 90;
+=head1 INSTALLATION
 
-use vars qw($TocAutomatic $TocProcessing $TocShown $TocCounter);
+toc is easily installable; move this file into the B<wiki/modules/>
+directory for your Oddmuse Wiki.
 
+=cut
+$ModulesDescription .= '<p>$Id: toc.pl,v 1.50 2008/09/29 03:14:39 leycec Exp $</p>';
+
+# ....................{ CONFIGURATION                      }....................
+
+=head1 CONFIGURATION
+
+footnotes is easily configurable; set these variables in the B<wiki/config.pl>
+file for your Oddmuse Wiki.
+
+=cut
+use vars qw($TocAutomatic
+            $TocHeaderText
+
+            $TocProcessing $TocShown $TocCounter);
+
+=head2 $TocAutomatic
+
+A boolean that: if true, automatically prepends the table of contents to the
+first header for a page or, if false, does not. If false, you must explicitly
+add the table of contents to each page for which you'd like one by explicitly
+adding the "<toc>" markup to that page.
+
+By default, this boolean is true.
+
+=cut
 $TocAutomatic = 1;
-my $TocPage;
 
+=head2 $TocHeaderText
+
+The string displayed as the header for a page's table of contents.
+
+=cut
+$TocHeaderText = 'Contents';
+
+# ....................{ INITIALIZATION                     }....................
 push(@MyInitVariables, \&TocInit);
+
+# If we're rendering the headings inside the sidebar, we want to refer
+# to the headings in the real page. $OpenPageName points to the
+# $SidebarName, however, so that the Forms extension works. That's why
+# we have a separate variable being used, here.
+my $TocPage;
 
 sub TocInit {
   $TocPage = GetId(); # this is the TOC target
@@ -35,10 +61,12 @@ sub TocInit {
   $TocShown = 0;
 }
 
-# If we're rendering the headings inside the sidebar, we want to refer
-# to the headings in the real page. $OpenPageName points to the
-# $SidebarName, however, so that the forms extension works. That's why
-# we have a separate variable being used, here.
+# ....................{ MARKUP                             }....................
+push(@MyRules, \&TocRule);
+
+# This must come *before* either headers.pl or the usemod.pl rules and
+# adds support for portrait-support.pl
+$RuleOrder{\&TocRule} = 90;
 
 sub TocRule {
   # When rendering a heading in the SideBar, $TocPage will be ne
@@ -56,11 +84,10 @@ sub TocRule {
     $PortraitSupportColor = 0;
     return $html;
   } elsif ($bol
-	   && $UseModMarkupInTitles
-	   && m/\G(\s*\n)*(\=+)[ \t]*(?=[^=\n]+=)/cg) {
+     && $UseModMarkupInTitles
+     && m/\G(\s*\n)*(\=+)[ \t]*(?=[^=\n]+=)/cg) {
     my $depth = length($2);
-    $depth = 6 if $depth > 6;
-    $depth = 2 if $depth < 2;
+       $depth = 6 if $depth > 6;
     my $html = CloseHtmlEnvironments()
       . ($PortraitSupportColorDiv ? '</div>' : '');
     $html .= TocHeadings() if not $TocShown and $TocAutomatic;
@@ -74,21 +101,21 @@ sub TocRule {
     $PortraitSupportColorDiv = 0; # after the HTML has been determined.
     $PortraitSupportColor = 0;
     return $html;
-  } elsif ($UseModMarkupInTitles
-	   && (InElement('h1')
-	       || InElement('h2')
-	       || InElement('h3')
-	       || InElement('h4')
-	       || InElement('h5')
-	       || InElement('h6'))
-	   && m/\G[ \t]*=+\n?/cg) {
+  } elsif ($UseModMarkupInTitles &&
+           (InElement('h1')
+         || InElement('h2')
+         || InElement('h3')
+         || InElement('h4')
+         || InElement('h5')
+         || InElement('h6'))
+     && m/\G[ \t]*=+\n?/cg) {
     return CloseHtmlEnvironments() . AddHtmlEnvironment('p');
   } elsif ($bol && (defined(&UsemodRule) || defined(&CreoleRule))
-	   && !$UseModMarkupInTitles
-	   && m/\G(\s*\n)*(\=+)[ \t]*(.+?)[ \t]*(=*)[ \t]*(\n|$)/cg) {
+     && !$UseModMarkupInTitles
+     && m/\G(\s*\n)*(\=+)[ \t]*(.+?)[ \t]*(=*)[ \t]*(\n|$)/cg) {
     my $depth = length($2);
-    $depth = 6 if $depth > 6;
-    $depth = 2 if $depth < 2;
+       $depth = 6 if $depth > 6;
+
     my $text = $3;
     my $html = CloseHtmlEnvironments()
       . ($PortraitSupportColorDiv ? '</div>' : '');
@@ -105,7 +132,7 @@ sub TocRule {
     $PortraitSupportColor = 0;
     return $html;
   } elsif ($bol && defined(&HeadersRule)
-	   && (m/\G((.+?)[ \t]*\n(---+|===+)[ \t]*\n)/gc)) {
+     && (m/\G((.+?)[ \t]*\n(---+|===+)[ \t]*\n)/gc)) {
     my $depth = substr($3,0,1) eq '=' ? 2 : 3;
     my $text = $2;
     my $html = CloseHtmlEnvironments()
@@ -135,14 +162,16 @@ sub TocHeadings {
   # don't mess up \G
   my ($oldpos, $old_) = (pos, $_);
   my $class = 'toc' . join(' ', @_);
-  my $key = 'toc';
+  my $key =   'toc';
+
   # Double rendering to make sure we get the table of contents right,
   # even though we don't know what markup rules are in effect.
-  my $html = TocPageHtml($TocPage);
-  my $Headings = $q->h2(T('Contents'));
+  my $html =  TocPageHtml($TocPage);
+  my $Headings = $q->h2(T($TocHeaderText));
   my $HeadingsLevel      = undef;
   my $HeadingsLevelStart = undef;
   my $count = 1;
+
   while ($html =~ m!<h([1-6]) id=[^>]*>(.*?)</h[1-6]>!g) {
     my ($depth, $text) = ($1, $2);
     my $link = $key . $count;
@@ -183,14 +212,51 @@ sub TocHeadings {
   return $q->div({-class=>$class}, $Headings) if $Headings;
 }
 
+# A Footnotes extension-specific hack; see TocPageHtml() comments, below.
+use vars qw(@FootnoteList);
+
 sub TocPageHtml {
   # HACK ALERT: PageHtml -> PrintPageHtml -> PrintWikiToHTML with
   # $savecache = 1, but the cache will not be saved because
   # $Page{blocks} and $Page{flags} are already equal unless we
   # localize them here. Without localization, the first request
   # returns the correct TOC, but subsequent requests from the cache do
-  # not. Strange that local %Page will not work, here.
+  # not. (A "local %Page;" will not work here, since that hash has within it
+  # several hash entries that must be persisted unmolested through the call to
+  # "PageHtml": namely, $Page{text}, having the raw Wiki text for this page).
   local $Page{blocks};
   local $Page{flags};
-  return PageHtml(shift);
+
+  # HACK ALERT: If using the Footnotes extension and this page has at least
+  # one such footnote, ensure the list of those footnotes is properly saved and
+  # restored in between calls to this function. (i.e., "...nuthin' to see here,
+  # folks.")
+  my @FootnoteListOld = @FootnoteList if defined &FootnotesRule;
+  my $html = PageHtml(shift);
+     @FootnoteList = @FootnoteListOld if defined &FootnotesRule;
+
+  return $html;
 }
+
+=head1 COPYRIGHT AND LICENSE
+
+The information below applies to everything in this distribution,
+except where noted.
+
+Copyright 2004, 2005, 2006, 2007 by Alex Schroeder <alex@emacswiki.org>.
+Copyleft  2008                   by B.w.Curry <http://www.raiazome.com>.
+
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see L<http://www.gnu.org/licenses/>.
+
+=cut
