@@ -1,3 +1,11 @@
+2008-09-29  Brian Curry  <http://www.raiazome.com/Brian_Curry>
+
+	* modules/toc.pl: New perldoc-style documentation.
+	($TocHeaderText): New option.
+	(TocPageHtml): Introduced a Footnotes extension-specific hack, so
+	as to circumvent footnote indexing errors after generating the
+	table of contents.
+
 2008-09-28  Brian Curry  <http://www.raiazome.com/Brian_Curry>
 
 	* modules/footnotes.pl: Refactored. Yet another flashy rewrite; it
